test/errors/offsets_error/zs/equality_operator_error.zs
package equality_operator_error;

struct EqualityOperatorError
{
    uint32 offset;
offset == 10:
    string field;
};
